--- a/src/css/global.css
+++ b/src/css/global.css
@@ -7,13 +7,13 @@
 
 /* Pages */
 @import url('./pages/home.css');
-@import url('/src/css/pages/dinamic.css');
-@import url('/src/css/pages/photos.css');
-@import url('/src/css/pages/videos.css');
-@import url('/src/css/pages/news.css');
-@import url('/src/css/pages/single_news.css');
-@import url('/src/css/pages/contact.css');
-@import url('/src/css/pages/online_apply.css');
-@import url('/src/css/pages/letter.css');
-@import url('/src/css/pages/faq.css');
-@import url('/src/css/pages/laws.css');
+@import url('./pages/dinamic.css');
+@import url('./pages/photos.css');
+@import url('./pages/videos.css');
+@import url('./pages/news.css');
+@import url('./pages/single_news.css');
+@import url('./pages/contact.css');
+@import url('./pages/online_apply.css');
+@import url('./pages/letter.css');
+@import url('./pages/faq.css');
+@import url('./pages/laws.css');
